# latence-trace-librechat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  librechat.yaml  package.json
.github/workflows/: fly-deploy-bridge.yml  fly-deploy-demo.yml
api/server/controllers/: AuthController.js
api/server/middleware/: requireJwtAuth.js
api/server/services/: DemoUser.js
client/: index.html  vite.config.ts
client/src/: style.css  vite-env.d.ts
client/src/components/Auth/: Login.tsx
client/src/components/TraceDemo/: TraceDemoShell.tsx  brand.ts  traceDemoState.ts
client/src/routes/: ChatRoute.tsx  TraceDemo.tsx  index.tsx
demo-bridge/: Dockerfile  README.md  fly.toml  pyproject.toml
demo-bridge/demo_bridge/: __init__.py  main.py
demo-bridge/latence_trace_demo_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demo-bridge/tests/: test_bridge.py
demo-data/: scenarios.json
docs/: integrator-snippets.md  latence-demo-baseline.md  staging-deployment.md  walkthrough-script.md
docs/trace-catalogue/: README.md
docs/trace-catalogue/runs/de-kafka-rossmann/: notes.md  sdk-native-compression-adversarial-20260506T065316Z.json  (+71 more)
fly/mongo/: fly.toml
n8n/: README.md
n8n/workflows/: trace-demo-sdk-bridge.json
scripts/: .env.dev-trace-demo.example  README-trace-demo.md  check-demo-health.mjs  dev-trace-demo-backend.sh  dev-trace-demo-bridge.sh  dev-trace-demo-tunnel.sh  dev-trace-demo.sh  reset-demo-state.mjs  seed-demo-data.mjs
tools/: audit_kafka.py  run_scenario.py
(+34 files in other folders)
