[project]
name = "latence-trace-demo-bridge"
version = "0.1.0"
description = "SDK-only TRACE bridge for the Latence LibreChat demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "langchain-core>=0.3",
  "latence>=0.1.4",
  "llama-index-core>=0.12",
  "pydantic>=2",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
